cluster/apps/networking/adguard/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: adguard-home
  namespace: networking
  labels:
    app: adguard-home
spec:
  type: LoadBalancer
  loadBalancerIP: 192.168.0.46
  selector:
    app: adguard-home
  ports:
  - name: http
    port: 80
    targetPort: 80
    protocol: TCP
  - name: dns-tcp
    port: 53
    targetPort: 53
    protocol: TCP
  - name: dns-udp
    port: 53
    targetPort: 53
    protocol: UDP
